add booking period validation